# rasterizer

./:  .ppm  .gitignore  CMakeLists.txt  README.md  main.cpp  output.ppm
src/: Vector2.inl  camera.cpp  camera.h  camera.inl  commonDefine.h  vector2.cpp  vector2.h
src/common/: commonDefine.h  logger.h  utilFunction.cpp  utilFunction.h
src/math/: matrix.inl  matrix4.cpp  matrix4.h  vector2.cpp  vector2.h  vector2.inl  vector3.cpp  vector3.h  vector3.inl  vector4.cpp  vector4.h
src/resterizer/: camera.cpp  camera.h  camera.inl  rasterizer.cpp  rasterizer.h  rasterizer.inl
